--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,33 @@
-# Jekyll
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
-vendor/
+# MkDocs build output
+site/
 
-# Bundler
-.bundle/
-Gemfile.lock
+# Python virtual environment
+venv/
+.venv/
+env/
+.env/
+*/activate
+*/pyvenv.cfg
+*/pip-selfcheck.json
 
-# System files
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# MkDocs cache
+.cache/
+
+# GitHub Pages deployment directory
+gh-pages/
+
+# Common editor and OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Editor files
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
-*~
 
-# Node modules (if using npm for anything)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-logs
-*.log
-
-# Temporary files
-tmp/
-temp/
+# Local configuration overrides (optional)
+# Use a mkdocs.local.yml for personal settings not to be committed
+mkdocs.local.yml
