--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
 site_name: Design System Docs
-site_url:  https://aarushivenk.github.io/design-system-website/
+site_url:  https://pglevy.github.io/design-system-docs/
 theme:
   name: material
