hiding the status icon on pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,3 +30,5 @@ markdown_extensions:
       options:
         custom_icons:
           - overrides/.icons # Path to your custom icons
+extra_css:
+  - stylesheets/extra.css
