--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,39 @@
-site_name: Design System Docs
+site_name: Appian Design System Docs
 site_url:  https://pglevy.github.io/design-system-docs/
+
+#Repository link in header 
+repo_url: https://github.com/pglevy/design-system-docs/
+repo_name: pglevy/design-system-docs
+
 theme:
   name: material
+  palette:
+
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
+
+  font:
+    text: Open Sans 
+    code: Roboto Mono 
+
   icon:
-    repo: fontawesome/brands # Default repository for brand icons
     admonition:
       note: fontawesome/solid/note-sticky
       abstract: fontawesome/solid/universal-access
@@ -30,5 +60,10 @@ markdown_extensions:
       options:
         custom_icons:
           - overrides/.icons # Path to your custom icons
+
 extra_css:
   - stylesheets/extra.css
+extra: 
+  social:
+    - icon: fontawesome/brands/github 
+      link: https://github.com/pglevy/design-system-docs/issues/new/choose
