--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ env/
 */activate
 */pyvenv.cfg
 */pip-selfcheck.json
+.python-version
 
 # Python cache files
 __pycache__/
@@ -31,3 +32,6 @@ gh-pages/
 # Local configuration overrides (optional)
 # Use a mkdocs.local.yml for personal settings not to be committed
 mkdocs.local.yml
+
+# Secrets
+.env
