--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: 3.x
       - name: Install dependencies
-        run: pip install mkdocs-material mkdocs-glightbox
+        run: pip install -r requirements.txt
       - name: Build site
         run: mkdocs build
       - name: Upload artifact
