Update colors.yml to include Control Panel colors
Was unsure about duplicate colors. I have them commented out for now with the conflicting color. Also unsure about naming the control panel color section

--- a/data/colors.yml
+++ b/data/colors.yml
@@ -138,3 +138,93 @@ colors:
       hex: "#636363"
     - name: "Gray 5"
       hex: "#222222"
+
+  control-panel:
+    # - name: "Studio Red"
+    #   hex: "#DE0037"
+    # Conflicts with Red 3
+    - name: "Studio Blood Orange"
+      hex: "#FF5722"
+    - name: "Studio Orange"
+      hex: "#FF9800"
+    - name: "Studio Amber"
+      hex: "#FFC107"
+    - name: "Studio Green"
+      hex: "#4CAF50"
+    - name: "Studio Lime"
+      hex: "#8AE521"
+    - name: "Studio Forest Green"
+      hex: "#018651"
+    - name: "Studio Seafoam"
+      hex: "#43DEA0"
+    - name: "Studio Teal"
+      hex: "#068B95"
+    - name: "Studio Cyan"
+      hex: "#33DDDD"
+    # - name: "Studio Accent"
+    #   hex: "#2322F0"
+    # Conflicts with Blue 3
+    - name: "Studio Sky"
+      hex: "#03A9F4"
+    - name: "Studio Indigo"
+      hex: "#451198"
+    - name: "Studio Blue Violet"
+      hex: "#7C4DFF"
+    - name: "Studio Plum"
+      hex: "#701198"
+    # - name: "Studio Violet"
+    #   hex: "#B561FF"
+    # Conflicts with Purple 3
+    - name: "Studio Magenta"
+      hex: "#B71079"
+    # - name: "Studio Pink"
+    #   hex: "#E21496"
+    # Conflicts with Pink 3
+    - name: "Studio Gray 800"
+      hex: "#424242"
+    - name: "Studio Brown"
+      hex: "#795548"control-panel:
+    # - name: "Studio Red"
+    #   hex: "#DE0037"
+    # Conflicts with Red 3
+    - name: "Studio Blood Orange"
+      hex: "#FF5722"
+    - name: "Studio Orange"
+      hex: "#FF9800"
+    - name: "Studio Amber"
+      hex: "#FFC107"
+    - name: "Studio Green"
+      hex: "#4CAF50"
+    - name: "Studio Lime"
+      hex: "#8AE521"
+    - name: "Studio Forest Green"
+      hex: "#018651"
+    - name: "Studio Seafoam"
+      hex: "#43DEA0"
+    - name: "Studio Teal"
+      hex: "#068B95"
+    - name: "Studio Cyan"
+      hex: "#33DDDD"
+    # - name: "Studio Accent"
+    #   hex: "#2322F0"
+    # Conflicts with Blue 3
+    - name: "Studio Sky"
+      hex: "#03A9F4"
+    - name: "Studio Indigo"
+      hex: "#451198"
+    - name: "Studio Blue Violet"
+      hex: "#7C4DFF"
+    - name: "Studio Plum"
+      hex: "#701198"
+    # - name: "Studio Violet"
+    #   hex: "#B561FF"
+    # Conflicts with Purple 3
+    - name: "Studio Magenta"
+      hex: "#B71079"
+    # - name: "Studio Pink"
+    #   hex: "#E21496"
+    # Conflicts with Pink 3
+    - name: "Studio Gray 800"
+      hex: "#424242"
+    - name: "Studio Brown"
+      hex: "#795548"
